webapp/style.css
html{
    scroll-behavior:smooth
}

body {
    background: #101044;
    color: white;
    height: 100vh;
    font-family: /*Safari for OS X and iOS (San Francisco)*/ -apple-system,
        /*Chrome < 56 for OS X (San Francisco)*/ BlinkMacSystemFont,
        /*Windows*/ "Segoe UI",
        /*Android*/ "Roboto",
        /*Basic web fallback */ "Helvetica Neue", Arial, sans-serif,
        /*Emoji fonts*/ "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

.page {
    display: flex;
    justify-content: center;
    width: 100%;
    min-height: 100%;
}

.content1 {
    padding-top: 50px;
    max-width: 700px;
    position: relative;
}

#title-text {
	display: inline-block;
    font-weight: bold;
}

#title-cursor {
	display: inline-block;
	vertical-align: middle;
	width: 3px;
	height: 50px;
	animation: blink 1.75s step-end infinite;
    display: none;
}
@media (min-width: 600px) {
    #title-pred {
        display: inline;
    }
}

@keyframes blink {
	from, to {
		background-color: transparent
	}
	50% {
		background-color: white;
	}
}

#input-form-container {
    margin: 0 0 25px;
    transition-timing-function: ease-in;
    transition-duration: 3s;
    transition-property: transform;
    transform-origin: center;
}

#thanks-container {
    text-align: center;

    transition: opacity ease-in-out 1.5s;
    opacity: 0;
    display: none;

    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
}

#thanks-container.show {
    transition: opacity ease-in-out 1.5s;
    opacity: 1;
}

h1 {
    font-family: 'Caveat', cursive;
    font-weight: 400;
    margin: 0;
    color: white;
    font-size: 54px;
}

p {
    font-weight: 300;
    font-size: 20px;
    color: white;
}

strong {
    font-weight: 700;
}

textarea, button, input, input[type=text] {
    font-family: inherit;
    font-size: 20px;
}

textarea {
    width: 100%;
    padding: 25px;
    color: white;
    background-color: transparent;
    border: white solid 3px;
    resize: vertical;

    grid-column-start: span 2;
}

input {
    padding: 25px;
    color: white;
    background-color: transparent;
    border: white solid 3px;
}

input[type=text] {
    word-wrap: break-word;
    word-break: break-all;
}

button {
    padding: 25px;
    border: white solid 3px;
    background-color: transparent;
    color: white;
}

button:focus:enabled,
button:hover:enabled {
    background-color: white;
    color: #101044;
    cursor: pointer;
}

.text-button {
    text-align: left;
    border: none;
    padding: 0;
    font-weight: bold;
    font-size: 26px;
}
.text-button:focus:enabled,
.text-button:hover:enabled {
    background-color: transparent;
    color: white;
    text-decoration: underline;
    outline: none;
}


.inputgrid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, auto);
    grid-gap: 15px;
}
.examplewrapper {
    margin: 30px 0;
    width: 100%;
    grid-column-start: span 2;
    display: flex;
    flex-direction: column;
}
.example {
    font-style: italic;
    text-align: right;
    margin: 5px;
}

@media (max-width: 800px) {
    .inputgrid {
        grid-template-columns: repeat(1, 1fr);
        grid-template-rows: repeat(3, auto);
    }

    textarea {
        grid-column-start: span 1;
    }
}

.goto {
    width: 100%;
    font-size: 50px;
    text-align: center;
}
.goto a {
    display: inline-block;
    text-decoration: none;
    transform: translateY(0);
    transition: 150ms ease;
}

.goto.goto-down a:focus,
.goto.goto-down a:hover {
    transform: translateY(10px);
    transition: 150ms ease;
}
.goto.goto-up a:focus,
.goto.goto-up a:hover {
    transform: translateY(-10px);
    transition: 150ms ease;
}

.content2 {
    max-width: 900px;
    position: relative;
    margin-bottom: 50px;
}

.faq-grid {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-gap: 45px;
}
@media (min-width: 900px) {
    .faq-grid {
        width: 700px;
    }
}
h2 {
    font-size: 55px;
}
.faq-extended {
    display: none;
    font-size: 20px;
    padding-left: 20px;
}
.faq.show .faq-extended {
    display: block;
}
.faq.show .text-button:focus:enabled,
.faq.show .text-button:hover:enabled {
    cursor: default;
    text-decoration: none;
}
a {
    color: white;
}

